--- a/angularProject/nogashiFront/package.json
+++ b/angularProject/nogashiFront/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@tinymce/tinymce-angular": "^3.3.1",
     "bootstrap": "^4.4.1",
+    "jquery": "^1.12.4",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
